5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4161/executions/1801_2584.log
== TEST (2019-06-11 10:38:16) 
-- CODE:
n = int(input("série: "))
for x in range(n):
	print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(c)
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:38:22) 
-- CODE:
n = int(input("série: "))
for x in range(n):
	print(x)
-- OUTPUT:
0
1
2
3
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:38:48) 
-- CODE:
n = int(input("série: "))
for x in range(1,n + 1):
	print(x)
-- OUTPUT:
1
2
3
4
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:38:59) 
-- CODE:
n = int(input("serie: "))
for x in range(1,n + 1):
	print(x)
-- OUTPUT:
1
2
3
4
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:40:49) 
-- CODE:
n = int(input("serie: "))
r = 0
for x in range(1,n + 1):
	if x%2 != 0:
		r = r + 1/x
	else:
		r = r - 1/x
print(r)
-- OUTPUT:
0.7833333333333332
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 10:41:05) 
-- CODE:
n = int(input("serie: "))
r = 0
for x in range(1,n + 1):
	if x%2 != 0:
		r = r + 1/x
	else:
		r = r - 1/x
print(r)
-- EXECUTION TIME:
0.652184
-- TEST CASE 1:
---- input:
5
---- correct output:
H = 0.783333
---- user output:
0.7833333333333332
-- TEST CASE 2:
---- input:
20
---- correct output:
H = 0.668771
---- user output:
0.6687714031754279
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:41:14) 
-- CODE:
n = int(input("serie: "))
r = 0
for x in range(1,n + 1):
	if x%2 != 0:
		r = r + 1/x
	else:
		r = r - 1/x
print(r)
-- OUTPUT:
0.7833333333333332
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:41:27) 
-- CODE:
n = int(input("serie: "))
r = 0
for x in range(1,n + 1):
	if x%2 != 0:
		r = r + 1/x
	else:
		r = r - 1/x
print("H =",r)
-- OUTPUT:
H = 0.7833333333333332
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:41:46) 
-- CODE:
n = int(input("serie: "))
r = 0
for x in range(1,n + 1):
	if x%2 != 0:
		r = r + 1/x
	else:
		r = r - 1/x
print("H =",round(r,6))
-- OUTPUT:
H = 0.783333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 10:41:52) 
-- CODE:
n = int(input("serie: "))
r = 0
for x in range(1,n + 1):
	if x%2 != 0:
		r = r + 1/x
	else:
		r = r - 1/x
print("H =",round(r,6))
-- EXECUTION TIME:
0.674723
-- TEST CASE 1:
---- input:
5
---- correct output:
H = 0.783333
---- user output:
H = 0.783333
-- TEST CASE 2:
---- input:
20
---- correct output:
H = 0.668771
---- user output:
H = 0.668771
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
